# Hybrid-Dynamics-FR3

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  environment.yaml  setup.py
include/: controller.h
py_src/: .gitignore  check_csv.py  dataset.py  fr3Env.py  inference.py  main.py  rl.py  simulate.py  train.py
simulate/: controller.cpp  robotmodel.cpp
